--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #fff9f3;
-    background-image: url(black-background-04-coolbackgrounds.png);
+    background-image: url(fundo.png);
 }
 
 header {
