--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #fff9f3;
-    background-image: url(fundo.png);
+    background-image: url(/imgs/fundo.png);
 }
 
 header {
@@ -107,7 +107,7 @@ th {
 }
 
 footer {
-    background-color: #bdbdbd;
+    background-color: #dddddd;
     color: rgb(0, 0, 0);
     text-align: center;
     padding: 10px 0;
